# dynamics

./: .gitignore  CMakeLists.txt  README.md
bindings/: kinematic_bicycle_model.cpp  model_bindings.cpp  pybind_module.cpp
cmake/: dependencies.cmake
core/: simulate.cpp  simulate.hpp
core/integration/: euler.hpp  rk4.hpp  simulate.hpp
core/models/: kinematic_bicycle.hpp
